k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: cookbookbo-skill
  name: cookbookbo-skill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookbookbo-skill
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cookbookbo-skill
    spec:
      containers:
      - image: jevillanueva/cookbookbo-skill:latest
        name: cookbookbo-skill
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
        resources: {}
status: {}
