k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cookbookbo-skill
  name: cookbookbo-skill
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: cookbookbo-skill
status:
  loadBalancer: {}
