k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cookbookbo-skill
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - skill.cocinabo.jevillanueva.dev
    secretName: quickstart-example-tls
  rules:
  - host: skill.cocinabo.jevillanueva.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cookbookbo-skill
            port:
              number: 8000
